<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:showDividers="middle"
        android:divider="@drawable/spacing_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_contact_activity_title"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPersonName"
                android:id="@+id/addContact_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:hint="@string/create_contact_name_hint">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/addContact_emailAddress_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:hint="@string/create_contact_email_hint">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="phone"
                android:id="@+id/addContact_phoneNumber_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"

                android:hint="@string/phone_number_hint">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addContact_addContact_btn"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="18dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:text="@string/add_contact_activity_title"></Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>