<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="18dp"
        app:cardElevation="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/listItem_contactNameLabel_tv"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/label_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listItem_contactName_tv"
                    android:textSize="22sp"
                    android:layout_marginStart="14dp"
                    tools:text="Example contact"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/listItem_emailLabel_tv"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/phone_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listItem_phoneNumber_tv"
                    android:textSize="22sp"
                    android:layout_marginStart="14dp"
                    tools:text="123456789" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:paddingBottom="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/listItem_phoneNumberLabel_tv"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/email_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listItem_email_tv"
                    android:textSize="22sp"
                    android:layout_marginStart="14dp"
                    tools:text="@string/example_email" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="end">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:backgroundTint="#AA0000"
                    android:layout_margin="10dp"
                    android:textSize="22sp"
                    android:id="@+id/listItem_deleteButton_btn"
                    android:text="Delete">


                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:backgroundTint="#0000AA"
                    android:textSize="22sp"
                    android:layout_margin="10dp"
                    android:text="Edit"
                    android:id="@+id/listItem_editButton_btn"
                    >


                </com.google.android.material.button.MaterialButton>
            </LinearLayout>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>
